# path_and_query_params-fastapi

./: pyproject.toml
todos/: main.py
